exports[`test renders correctly with children 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#444",
      "flex": 1,
      "paddingTop": 20,
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    Dashboard
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail">
    About
  </Text>
</View>
`;

exports[`test renders correctly without props 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#444",
      "flex": 1,
      "paddingTop": 20,
    }
  } />
`;
